--- a/src/styles/pages/Parents/Home.css
+++ b/src/styles/pages/Parents/Home.css
@@ -3,21 +3,24 @@
     background: url('https://images.unsplash.com/photo-1508089101008-504c11e5d606?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
 }
 
-.tranches-dage {
+.part {
     display: grid;
     grid-gap: 2vh 2vw;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    transition: 600ms ease-in-out;
 }
 
-.tranches-dage .section {
-    padding: 10vh 10vw;
+.part .section {
+    padding: 7vh 7vw;
     text-align: center;
     align-self: center;
 }
 
-.tranches-dage .section:hover {
-    transform: scale(1.25);
+.part .section:hover {
+    transform: scale(0.9);
+    transition: 300ms ease-in-out;
+    border-radius: 23px;
 }
 
 .farfa {
