--- a/src/styles/pages/Parents/Nav.css
+++ b/src/styles/pages/Parents/Nav.css
@@ -14,6 +14,17 @@
     right: 0;
 }
 
+.active {
+    width: 100vw;
+    left: 0;
+    top: 0;
+    right: 0;
+    transition: 600ms ease-in-out;
+    background: white;
+    transform: translateX(-2vw);
+    border-bottom-left-radius: 0;
+}
+
 .contact {
     background-color: rgb(25, 25, 83);
     grid-column: 4;
