--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -18,6 +18,16 @@
     --violets: #8717CC;
 }
 
+.disabled {
+    user-select: none;
+    transition: 300ms ease-in-out;
+}
+
+.disabled:hover {
+    opacity: 0.25;
+    transition: 300ms ease-in-out
+}
+
 h1 {
     font-size: 3rem;
     letter-spacing: 1rem;
@@ -55,17 +65,7 @@ a {
     box-shadow: 0 8px 30px 0 #00171f46;
     border-bottom-left-radius: 53px;
     z-index: 100;
-    transition: 600ms ease-in-out;
-}
-
-.full-width {
-    width: 100vw;
-    left: 0;
-    top: 0;
-    right: 0;
     transition: 300ms ease-in-out;
-    background: white;
-    transform: translateX(-2vw);
 }
 
 .block {
