--- a/src/styles/pages/footer.css
+++ b/src/styles/pages/footer.css
@@ -1,24 +1,42 @@
-.footer {
-    height: 25vh;
-    width: 100vw;
-    background: var(--SGDF);
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+@media only screen and (min-width:900px) {
+    .footer {
+        height: 25vh;
+        width: 100vw;
+        background: var(--SGDF);
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
+    .footer .logo {
+        grid-row: 1/6;
+        grid-column: 1/5;
+        height: 20vh;
+        width: 20vw;
+    }
+    .footer .block {
+        grid-row: 2/5;
+        grid-column: 4/11;
+        width: 70vw;
+        height: 18vh;
+        margin: 1vh 1vw;
+        padding: 1vh 2vw;
+    }
 }
 
-.footer .logo {
-    grid-row: 1/6;
-    grid-column: 1/5;
-    height: 20vh;
-    width: 20vw;
-}
-
-.footer .block {
-    grid-row: 2/5;
-    grid-column: 4/11;
-    width: 70vw;
-    height: 18vh;
-    margin: 1vh 1vw;
-    padding: 1vh 2vw;
+@media only screen and (max-width:900px) {
+    .footer {
+        display: flex;
+        flex-direction: column;
+        background: var(--SGDF);
+        position: relative;
+        margin: 0 5vw;
+        padding: 10vh;
+    }
+    .footer .logo {
+        width: 25rem;
+        height: 15rem;
+    }
+    .footer .block {
+        padding: 2rem 6rem;
+    }
 }
