--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,103 +1,164 @@
-        @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;600&display=swap');
-        @import url('./pages/footer.css');
-         :root {
-            overflow-x: hidden;
-            font-size: 16px;
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            transition: 600ms ease-in-out;
-            color: white;
-            text-decoration: none;
-            list-style: none;
-            font-family: 'Montserrat', sans-serif;
-            --farfa: #45EA87;
-            --oranges: #FF9534;
-            --bleus: #325EFD;
-            --rouges: #FF2E00;
-            --compas: #008A16;
-            --violets: #8717CC;
-            --SGDF: #003a5d;
-        }
-        
-        .disabled {
-            user-select: none;
-            transition: 300ms ease-in-out;
-        }
-        
-        .disabled:hover {
-            opacity: 0.25;
-            transition: 300ms ease-in-out
-        }
-        
-        h1 {
-            font-size: 3rem;
-            letter-spacing: 1rem;
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 600;
-        }
-        
-        h2 {
-            font-size: 2rem;
-            letter-spacing: 0.5rem;
-            font-family: 'Lobster', cursive;
-        }
-        
-        h3 {
-            font-size: 1.5rem;
-            letter-spacing: 0.25rem;
-        }
-        
-        li {
-            list-style: none;
-        }
-        
-        a {
-            color: white;
-            text-decoration: none;
-        }
-        
-        .top {
-            display: flex;
-            margin: 1vh 1vw;
-            padding: 2vh 2vw;
-            text-align: center;
-            width: 100vw;
-            height: 10vh;
-            box-shadow: 0 8px 30px 0 #00171f46;
-            border-bottom-left-radius: 53px;
-            z-index: 100;
-            transition: 300ms ease-in-out;
-        }
-        
-        .block {
-            box-shadow: 0 8px 30px 0 #00171f46;
-        }
-        
-        .banner {
-            overflow: hidden;
-            position: relative;
-            min-height: 35vh;
-            min-width: 100vw;
-            background-attachment: fixed;
-            background-size: cover;
-            -moz-background-size: cover;
-            -webkit-background-size: cover;
-            background-repeat: no-repeat;
-            background-position: top center;
-            font-size: 14vh;
-            font-family: "Montserrat", serif;
-            font-size: 24px;
-            font-weight: 200;
-            text-transform: uppercase;
-            color: white;
-            padding: 0;
-            margin: 0;
-            text-align: center;
-        }
-        
-        .paragraph {
-            box-shadow: 0 8px 30px 0 #00171f46;
-            margin: 2vh 5vw;
-            padding: 1vh 2vw;
-        }
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@400;600&display=swap');
+@import url('./animations.css');
+@import url('./pages/footer.css');
+ :root {
+    overflow-x: hidden;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    transition: 600ms ease-in-out;
+    color: white;
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    --farfa: #45EA87;
+    --oranges: #FF9534;
+    --bleus: #325EFD;
+    --rouges: #FF2E00;
+    --compas: #008A16;
+    --violets: #8717CC;
+    --SGDF: #003a5d;
+}
+
+.farfa {
+    background-color: var(--farfa);
+}
+
+.oranges {
+    background: var(--oranges);
+}
+
+.bleus {
+    background: var(--bleus);
+}
+
+.rouges {
+    background: var(--rouges);
+}
+
+.compas {
+    background: var(--compas);
+}
+
+.violets {
+    background: var(--violets);
+}
+
+@media only screen and (max-width: 900px) {
+    body {
+        transform: translateX(-2vw);
+    }
+     :root {
+        font-size: 8px;
+        text-align: center;
+        text-justify: auto;
+    }
+    h2 {
+        font-size: 2rem;
+        letter-spacing: 0.5rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+    }
+    .banner {
+        overflow: hidden;
+        position: relative;
+        min-height: 5vh;
+        min-width: 100vw;
+        background-attachment: fixed;
+        background-size: cover;
+        -moz-background-size: cover;
+        -webkit-background-size: cover;
+        background-repeat: no-repeat;
+        background-position: top center;
+        text-transform: uppercase;
+        color: white;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+    }
+}
+
+.disabled {
+    user-select: none;
+    transition: 300ms ease-in-out;
+}
+
+.disabled:hover {
+    opacity: 0.25;
+    transition: 300ms ease-in-out
+}
+
+h1 {
+    font-size: 3rem;
+    letter-spacing: 1rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+@media only screen and (min-width: 900px) {
+    h2 {
+        font-size: 2rem;
+        letter-spacing: 0.5rem;
+        font-family: 'Lobster', cursive;
+    }
+}
+
+h3 {
+    font-size: 1.5rem;
+    letter-spacing: 0.25rem;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+.top {
+    display: flex;
+    margin: 1vh 1vw;
+    padding: 2vh 2vw;
+    text-align: center;
+    width: 100vw;
+    height: 10vh;
+    box-shadow: 0 8px 30px 0 #00171f46;
+    border-bottom-left-radius: 53px;
+    z-index: 100;
+    transition: 300ms ease-in-out;
+}
+
+.block {
+    box-shadow: 0 8px 30px 0 #00171f46;
+}
+
+.banner {
+    overflow: hidden;
+    position: relative;
+    min-height: 35vh;
+    min-width: 100vw;
+    background-attachment: fixed;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    font-size: 14vh;
+    font-family: "Montserrat", serif;
+    font-size: 24px;
+    font-weight: 200;
+    text-transform: uppercase;
+    color: white;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+.paragraph {
+    box-shadow: 0 8px 30px 0 #00171f46;
+    margin: 2vh 5vw;
+    padding: 1vh 2vw;
+}
