--- a/src/styles/pages/Landing.css
+++ b/src/styles/pages/Landing.css
@@ -30,7 +30,6 @@
         grid-row: 3 /4;
         grid-column: 3/6;
         font-size: 3rem;
-        background: rgba(218, 218, 218, 0.025);
         padding: 1vh 1vw;
         border-radius: 23px;
     }
@@ -54,6 +53,8 @@
     .Left {
         animation: ZoomIn 600ms;
         position: absolute;
+        height: 50vh;
+        width: 100vw;
         top: 0;
         left: 0;
         right: 0;
@@ -62,11 +63,13 @@
     }
     .Right {
         animation: ZoomIn 600ms;
-        position: absolute;
+        position: fixed;
         bottom: 0;
         left: 0;
         right: 0;
         top: 45vh;
+        width: 100vw;
+        height: 45vh;
         background: url('https://images.unsplash.com/photo-1573146500785-c84e60e35184?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
     }
     .Right h2 {
