--- a/src/styles/pages/Parents/Home.css
+++ b/src/styles/pages/Parents/Home.css
@@ -1,4 +1,8 @@
         @import '../Nav.css';
+        body {
+            background-color: white;
+        }
+        
         @media only screen and (max-width: 900px) {
             .part {
                 display: flex;
