--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -6,7 +6,7 @@
     background-color: var(--SGDF);
 }
 
-.Contact h3 {
+.Contact .help {
     font-size: 3rem;
     letter-spacing: 2rem;
 }
@@ -50,4 +50,34 @@ i {
     padding: 2vh;
     margin: 1.5vh;
     border-radius: 23px;
+}
+
+.mail:hover i,
+.phone:hover i {
+    transform: rotate(-20deg) scale(1.25);
+    transition: 300ms ease-in-out;
+}
+
+.mail:hover,
+.phone:hover {
+    box-shadow: 0 16px 30px 0 #00171f46;
+}
+
+.fas {
+    transition: 600ms ease-in-out;
+}
+
+.Move:hover .fas {
+    transform: rotate(10deg);
+    transition: 300ms ease;
+}
+
+.Cake:hover .fas {
+    transform: rotate(10deg);
+    transition: 300ms ease;
+}
+
+.Baby:hover .fas {
+    transform: rotate(10deg);
+    transition: 300ms ease;
 }
