--- a/src/styles/pages/Parents/Home.css
+++ b/src/styles/pages/Parents/Home.css
@@ -27,7 +27,7 @@
         @media only screen and (min-width: 900px) {
             .part {
                 display: grid;
-                grid-gap: 2vh 2vw;
+                grid-gap: 0.5vh 1vw;
                 grid-template-columns: repeat(3, 25vw);
                 grid-template-rows: repeat(2, 25vw);
                 transition: 600ms ease-in-out;
@@ -36,6 +36,7 @@
             }
             .part .section {
                 padding: 7vh 7vw;
+                margin: 0;
                 text-align: center;
                 align-self: center;
             }
